change border colours to improve contrast. Fixes accessibility issue in SUPPORT-20200/NRW bug ref 169593

--- a/nrw/geonetwork/catalog/style/srv_custom_style.less
+++ b/nrw/geonetwork/catalog/style/srv_custom_style.less
@@ -351,3 +351,12 @@ span.gn-user-name.ng-binding :hover {
 ::placeholder { /* Most modern browsers support this now. */
    color: #58595B !important;
 }
+
+// change border colours to improve accessibility
+.form-control, .gn-row-main .gn-form-any .btn, .btn-default {
+    border-color: #8f8f8f !important;
+}
+
+.gn-facet .gn-facet-input-group input, .gn-facet .gn-facet-input-group .input-group-addon, .gn-facet .gn-facet-input-group .btn {
+    border-bottom: 1px solid #8f8f8f !important;
+}
